17-03-22/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weapp
  labels:
    name: webapp-ingress
spec:
  rules:
  - host: app.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service
            port: 
              number: 80
